@@ -38,6 +38,8 @@
 	* inst/tinytest/test_sugar.R: Idem
 	* inst/tinytest/test_sugar_var.R: Idem
 	* inst/tinytest/test_support.R: Idem
+	* inst/tinytest/test_system.R: Idem
+	* inst/tinytest/test_table.R: Idem
 
 2019-11-23  Dirk Eddelbuettel  <edd@debian.org>
 
